Fixed typo on product name

--- a/src/index.html
+++ b/src/index.html
@@ -63,7 +63,7 @@
 				</div>
 			</div>
 			<div class="product__info">
-				<h1 class="product__name">Nike Air MAx 90</h1>
+				<h1 class="product__name">Nike Air Max 90</h1>
 				<p class="product__description">
 					Whether you want a monochromatic look or sporty with an edge, the AM90
 					can do it all. Customise everything from the laces to the Nike Air
